--- a/WishListMavenTest/pom.xml
+++ b/WishListMavenTest/pom.xml
@@ -50,6 +50,17 @@
       <artifactId>xstream</artifactId>
       <version>1.4.8</version>
     </dependency>
+        <!-- Logging -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.10</version>
+     </dependency>
+     <dependency>
+       <groupId>ch.qos.logback</groupId>
+       <artifactId>logback-classic</artifactId>
+       <version>1.1.2</version>
+       <scope>runtime</scope>
+     </dependency>
   </dependencies>
-  
 </project>
